--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
-    "googleapis": "^140.0.1",
-    "nodemailer": "^6.9.14",
-    "open": "^10.1.0",
-    "server-destroy": "^1.0.1"
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "prisma": "^5.16.1"
