--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.16.1",
+    "@prisma/client": "^5.16.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
-    "nodemailer": "^6.9.14"
-  },
-  "devDependencies": {
-    "prisma": "^5.16.1"
+    "nodemailer": "^6.9.14",
+    "prisma": "^5.16.2"
   }
 }
